cross-domain auth

--- a/dashboard/src/main/webapp/monitor.html
+++ b/dashboard/src/main/webapp/monitor.html
@@ -94,6 +94,7 @@ function requestApi() {
 	var interval = parseInt(selInterval.value);
 	var now = Math.floor(new Date().getTime() / MINUTE);
 	var xhr = new XMLHttpRequest();
+	xhr.withCredentials = true;
 	xhr.onload = function() {
 		drawChart(eval("(" + xhr.responseText + ")"), title, now, interval);
 	};
