--- a/dashboard/src/main/webapp/request.html
+++ b/dashboard/src/main/webapp/request.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    	<script src="js/jquery.min.js" language="javascript"></script>
+		<script src="js/jquery.min.js" language="javascript"></script>
 		<script src="js/highcharts.js" language="javascript"></script>
 	</head>
 	<body>
@@ -101,7 +101,11 @@ function requestApi() {
 	var interval = parseInt(selInterval.value);
 	var now = Math.floor(new Date().getTime() / MINUTE);
 	var xhr = new XMLHttpRequest();
-	xhr.withCredentials = true;
+	try {
+		xhr.withCredentials = true;
+	} catch (e) {
+		// Ignore
+	}
 	xhr.onload = function() {
 		drawChart(eval("(" + xhr.responseText + ")"), title, now, interval);
 	};
