--- a/dashboard/src/main/webapp/resolve.html
+++ b/dashboard/src/main/webapp/resolve.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    	<script src="js/jquery.min.js" language="javascript"></script>
+		<script src="js/jquery.min.js" language="javascript"></script>
 		<script src="js/highcharts.js" language="javascript"></script>
 	</head>
 	<body>
@@ -94,6 +94,11 @@ function requestApi() {
 	var interval = parseInt(selInterval.value);
 	var now = Math.floor(new Date().getTime() / MINUTE);
 	var xhr = new XMLHttpRequest();
+	try {
+		xhr.withCredentials = true;
+	} catch (e) {
+		// Ignore
+	}
 	xhr.onload = function() {
 		drawChart(eval("(" + xhr.responseText + ")"), "Request", now, interval);
 	};
