--- a/dashboard/src/main/webapp/dashboard.html
+++ b/dashboard/src/main/webapp/dashboard.html
@@ -146,7 +146,7 @@ function loadParams(reload) {
 		if (j < 0) {
 			continue;
 		}
-		paramMap[param.substring(0, j)] = unescape(param.substring(j + 1));
+		paramMap[unescape(param.substring(0, j))] = unescape(param.substring(j + 1));
 	}
 
 	name = paramMap._name;
@@ -168,7 +168,7 @@ function loadParams(reload) {
 	interval = index < 0 ? 0 : interval;
 	selInterval.selectedIndex = index < 0 ? 0 : index;
 
-	apiUrl = DASHBOARD_API + (interval < 15 ? "" : "_quarter.") + name + "/" + METHOD_NAME[method] +
+	apiUrl = DASHBOARD_API + (interval < 15 ? "" : "_quarter.") + escape(name) + "/" + METHOD_NAME[method] +
 			"?_length=" + DASHBOARD_LENGTH + "&_interval=" + (interval < 15 ? interval : interval / 15);
 
 	now = true;
@@ -203,7 +203,7 @@ function loadParams(reload) {
 		tagMap = eval("(" + xhr.responseText + ")");
 		showTags();
 	};
-	xhr.open("GET", DASHBOARD_API + name + "/tags?_r=" + Math.random(), true);
+	xhr.open("GET", DASHBOARD_API + escape(name) + "/tags?_r=" + Math.random(), true);
 	xhr.send(null);
 }
 
@@ -231,7 +231,7 @@ function showTags() {
 			var tag = tags[i];
 			html += "<option ";
 			if (selectedTag == tag._value) {
-				apiUrl += "&" + tagName + "=" + escape(selectedTag);
+				apiUrl += "&" + escape(tagName) + "=" + escape(selectedTag);
 				html += "selected ";
 			}
 			html += "value=\"" + tag._value + "\">" + tag._value + "</option>";
@@ -273,7 +273,7 @@ function reloadParams() {
 		var sel = window["tag_" + tagName];
 		var value = sel.options[sel.selectedIndex].value;
 		if (value != "_") {
-			hash += "&" + tagName + "=" + escape(value);
+			hash += "&" + escape(tagName) + "=" + escape(value);
 		}
 	}
 	location.href = hash;
