--- a/dashboard/src/main/webapp/index.html
+++ b/dashboard/src/main/webapp/index.html
@@ -2,10 +2,16 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="config.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	</head>
 	<body>
-		<div id="div"></div>
+		<div class="panel panel-default">
+			<div class="panel-heading">We have these metrics ...</div>
+			<div class="panel-body" id="div"></div>
+		</div>
 		<script type="text/javascript"><!--
 
 var xhr = new XMLHttpRequest();
@@ -29,7 +35,7 @@ xhr.onload = function() {
 	}
 	div.innerHTML = html;
 };
-xhr.open("GET", DASHBOARD_API + "metric.size/count?_group_by=name&_r=" + Math.random(), true);
+xhr.open("GET", DASHBOARD_API + "metric.size/count?_group_by=name&_length=2&_r=" + Math.random(), true);
 xhr.send(null);
 
 		--></script>
