tags use bootstrap dropdowns

--- a/dashboard/src/main/webapp/dashboard.html
+++ b/dashboard/src/main/webapp/dashboard.html
@@ -14,7 +14,7 @@
 		<div class="panel-footer form-inline" style="white-space:nowrap" id="divTags"></div>
 		<div class="panel-footer form-inline" style="white-space:nowrap">
 			<div class="btn-group">
-				<button type="button" class="btn btn-default disabled">Method</button>
+				<button type="button" class="btn btn-danger disabled">Method</button>
 				<div class="btn-group dropup">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnMethod"></span>
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-default disabled">Group by</button>
+				<button type="button" class="btn btn-danger disabled">Group by</button>
 				<div class="btn-group dropup">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnGroup"></span>
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 			<div class="btn-group">
-				<button type="button" class="btn btn-default disabled">Interval</button>
+				<button type="button" class="btn btn-danger disabled">Interval</button>
 				<div class="btn-group dropup">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnInterval"></span>
@@ -48,11 +48,11 @@
 			</div>
 			<div class="input-group">
 				<div class="input-group-addon">Until</div>
-				<input type="text" id="txtDate" class="form-control">
+				<input type="text" class="form-control" style="width:100px" id="txtDate">
 			</div>
 			<div class="btn-group">
 				<div class="btn-group dropup">
-					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" id="btnHour">
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="btnHour">
 						<span id="spnHour"></span>
 						<span class="caret"></span>
 					</button>
@@ -60,7 +60,7 @@
 				</div>
 				<button type="button" class="btn btn-default disabled">:</button>
 				<div class="btn-group dropup">
-					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" id="btnMinute">
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="btnMinute">
 						<span id="spnMinute"></span>
 						<span class="caret"></span>
 					</button>
