--- a/dashboard/src/main/webapp/dashboard.html
+++ b/dashboard/src/main/webapp/dashboard.html
@@ -10,12 +10,12 @@
 		<script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
 	</head>
 	<body>
-		<div id="divChart"></div>
+		<div id="divChartTop"></div>
 		<div class="panel-footer form-inline" style="white-space:nowrap" id="divTags"></div>
 		<div class="panel-footer form-inline" style="white-space:nowrap">
 			<div class="btn-group">
 				<button type="button" class="btn btn-danger disabled">Method</button>
-				<div class="btn-group dropup">
+				<div class="btn-group" id="divMethod">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnMethod"></span>
 						<span class="caret"></span>
@@ -25,7 +25,7 @@
 			</div>
 			<div class="btn-group">
 				<button type="button" class="btn btn-danger disabled">Group by</button>
-				<div class="btn-group dropup">
+				<div class="btn-group" id="divGroup">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnGroup"></span>
 						<span class="caret"></span>
@@ -35,7 +35,7 @@
 			</div>
 			<div class="btn-group">
 				<button type="button" class="btn btn-danger disabled">Interval</button>
-				<div class="btn-group dropup">
+				<div class="btn-group" id="divInterval">
 					<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
 						<span id="spnInterval"></span>
 						<span class="caret"></span>
@@ -51,7 +51,7 @@
 				<input type="text" class="form-control" style="width:100px" id="txtDate">
 			</div>
 			<div class="btn-group">
-				<div class="btn-group dropup">
+				<div class="btn-group" id="divHour">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="btnHour">
 						<span id="spnHour"></span>
 						<span class="caret"></span>
@@ -59,7 +59,7 @@
 					<ul class="dropdown-menu" role="menu" id="ulHour"></ul>
 				</div>
 				<button type="button" class="btn btn-default disabled">:</button>
-				<div class="btn-group dropup">
+				<div class="btn-group" id="divMinute">
 					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="btnMinute">
 						<span id="spnMinute"></span>
 						<span class="caret"></span>
@@ -71,6 +71,7 @@
 				<label class="btn btn-primary" id="btnSubmit">Submit</label>
 			</div>
 		</div>
+		<div id="divChartBottom"></div>
 		<script type="text/javascript" src="config.js"></script>
 		<script type="text/javascript" src="dashboard.js"></script>
 	</body>
