Quarterly Bugfix; Tags Improvement; Dashboard Beautify

--- a/dashboard/src/main/webapp/dashboard.html
+++ b/dashboard/src/main/webapp/dashboard.html
@@ -44,7 +44,12 @@
 				</div>
 			</div>
 			<div class="btn-group" data-toggle="buttons">
-				<label class="btn btn-primary" id="btnNow">Now</label>
+				<label class="btn btn-info" id="btnReal">
+					<input type="radio">Real Time
+				</label>
+				<label class="btn btn-info" id="btnHist">
+					<input type="radio">Historical
+				</label>
 			</div>
 			<div class="input-group">
 				<div class="input-group-addon">Until</div>
