Beautify Common Dashboard UI

--- a/dashboard/src/main/webapp/dashboard.html
+++ b/dashboard/src/main/webapp/dashboard.html
@@ -10,6 +10,12 @@
 		<script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
 	</head>
 	<body>
+		<style><!--
+#divChartTop, #divChartBottom {
+	text-align:	center;
+	font-size:	18px;
+}
+		--></style>
 		<div id="divChartTop"></div>
 		<div class="panel-footer form-inline" style="white-space:nowrap" id="divTags"></div>
 		<div class="panel-footer form-inline" style="white-space:nowrap">
