--- a/dashboard/src/main/webapp/index.html
+++ b/dashboard/src/main/webapp/index.html
@@ -83,62 +83,59 @@ li {
 	display:	block;
 }
 
-#myTab {
+#nav {
 	width:		100%;
 }
 
-#myTabContent {
+#dashboard {
 	display:	table-row;
 	height:		100%;
 }
 
-#myTabContent iframe {
+#dashboard iframe {
 	width:		100%;
 	height:		100%;
 }
 
 		--></style>
-		<div id="myTab" class="navbar">
+		<div id="nav" class="navbar">
 			<div class="navbar-inner">
 					<a class="logo">Dashboard</a>
-				<ul class="nav">
-					<li><a id="aAll" href="#">All Metrics</a></li>
-					<li class="active"><a id="aSize" href="#">Size</a></li>
-					<li><a id="aRows" href="#">Rows</a></li>
-					<li><a id="aThroughput" href="#">Throughput</a></li>
-				</ul>
+				<ul class="nav"></ul>
 			</div>
 		</div>
-		<div id="myTabContent" class="tab-content">
+		<div id="dashboard" class="tab-content">
 			<iframe></iframe>
 		</div>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="config.js"></script>
 		<script type="text/javascript"><!--
 
-var LINK_MAP = {
-	aAll: "all.html",
-	aSize: "dashboard.html?_r=s#_name=metric.size&_method=max&_interval=15&_group_by=name",
-	aRows: "dashboard.html?_r=r#_name=metric.rows&_method=sum&_interval=15&_group_by=name",
-	aThroughput: "dashboard.html?_r=t#_name=metric.throughput&_method=sum&_interval=15&_group_by=remote_addr",
-};
-
-function goto(id) {
-	var src = LINK_MAP[id];
+var html = "<li><a href=\"#\" src=\"all.html\">All Metrics</a></li>";
+var navLen = INDEX_NAV.length;
+var i, entry, src, today, active;
+for (i = 0; i < INDEX_NAV.length; i ++) {
+	entry = INDEX_NAV[i];
+	if (entry.length <= 1) {
+		continue;
+	}
+	src = entry[1];
 	if (src.substring(src.length - 8) == "&_until=") {
-		var today = new Date();
+		today = new Date();
 		src += new Date(today.getFullYear(), today.getMonth(), today.getDate()).getTime() / 60000 + 1440;
 	}
-	$("#myTabContent iframe").attr("src", src);
+	active = entry.length > 2 && entry[2];
+	html += "<li" + (active ? " class=\"active\" " : "") + "><a href=\"#\" src=\"" + src + "\">" + entry[0] + "</a></li>";
+	if (active) {
+		$("#dashboard iframe").attr("src", src);
+	}
 }
-
-$("#myTab a").click(function() {
+$("#nav .nav").html(html);
+$("#nav a").click(function() {
 	$(this).tab("show");
-	goto($(this).attr("id"));
+	$("#dashboard iframe").attr("src", $(this).attr("src"));
 });
-
-goto("aSize");
-
 		--></script>
 	</body>
 </html>
