--- a/dashboard/src/main/webapp/all.html
+++ b/dashboard/src/main/webapp/all.html
@@ -6,6 +6,10 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<style>
+body {
+	padding: 1em;
+}
+
 td {
 	padding-right: 1em;
 	padding-bottom: 1px;
@@ -13,13 +17,9 @@ td {
 		</style>
 	</head>
 	<body>
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<table>
-					<tbody id="tbody"></tbody>
-				</table>
-			</div>
-		</div>
+		<table>
+			<tbody id="tbody"></tbody>
+		</table>
 		<script type="text/javascript" src="config.js"></script>
 		<script type="text/javascript" src="all.js"></script>
 	</body>
