--- a/dashboard/src/main/webapp/index.html
+++ b/dashboard/src/main/webapp/index.html
@@ -2,102 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="stylesheet" type="text/css" href="index.css" />
 	</head>
 	<body>
-		<style><!--
-
-body {
-	color:		#444444;
-	font-family: Arial;
-	font-size:	14px;
-	line-height: 20px;
-	margin:		0;
-}
-
-html, body {
-	display:	table;
-	width:		100%;
-	height:		100%;
-	overflow:	hidden;
-}
-
-ul, ol {
-	padding:	0;
-}
-
-li {
-	line-height: 20px;
-}
-
-.navbar {
-	margin-bottom: 0;
-	overflow:	visible;
-}
-
-.navbar .logo {
-	background-color: #368ee0;
-	color:		#ffffff;
-	display:	block;
-	float:		left;
-	font-size:	20px;
-	font-weight: 200;
-	margin-left: -20px;
-	padding:	16px 20px;
-}
-
-.navbar-inner {
-	background-color: #4a4a4a;
-	min-height:	52px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.navbar .nav {
-	display:	block;
-	float:		left;
-	left:		0;
-	margin:		0 20px 0 0;
-	position:	relative;
-}
-
-.navbar .nav > li {
-	float:		left;
-}
-
-.navbar .nav > li > a {
-	color:		#eeeeee;
-	float:		none;
-	padding:	16px 15px;
-	text-decoration: none;
-}
-
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-	background-color: #333333;
-}
-
-.nav {
-	list-style:	outside none none;
-}
-
-.nav > li > a {
-	display:	block;
-}
-
-#nav {
-	width:		100%;
-}
-
-#dashboard {
-	display:	table-row;
-	height:		100%;
-}
-
-#dashboard iframe {
-	width:		100%;
-	height:		100%;
-}
-
-		--></style>
 		<div id="nav" class="navbar">
 			<div class="navbar-inner">
 					<a class="logo">Dashboard</a>
@@ -110,32 +17,6 @@ li {
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="config.js"></script>
-		<script type="text/javascript"><!--
-
-var html = "<li><a href=\"#\" src=\"all.html\">All Metrics</a></li>";
-var navLen = INDEX_NAV.length;
-var i, entry, src, today, active;
-for (i = 0; i < INDEX_NAV.length; i ++) {
-	entry = INDEX_NAV[i];
-	if (entry.length <= 1) {
-		continue;
-	}
-	src = entry[1];
-	if (src.substring(src.length - 8) == "&_until=") {
-		today = new Date();
-		src += new Date(today.getFullYear(), today.getMonth(), today.getDate()).getTime() / 60000 + 1440;
-	}
-	active = entry.length > 2 && entry[2];
-	html += "<li" + (active ? " class=\"active\" " : "") + "><a href=\"#\" src=\"" + src + "\">" + entry[0] + "</a></li>";
-	if (active) {
-		$("#dashboard iframe").attr("src", src);
-	}
-}
-$("#nav .nav").html(html);
-$("#nav a").click(function() {
-	$(this).tab("show");
-	$("#dashboard iframe").attr("src", $(this).attr("src"));
-});
-		--></script>
+		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
