--- a/dashboard/src/main/webapp/all.html
+++ b/dashboard/src/main/webapp/all.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-		<style>
+	</head>
+	<body>
+		<style><!--
 body {
 	padding: 1em;
 }
@@ -12,9 +14,7 @@ td {
 	padding-right: 1em;
 	padding-bottom: 1px;
 }
-		</style>
-	</head>
-	<body>
+		--></style>
 		<table>
 			<tbody id="tbody"></tbody>
 		</table>
